@@ -1,4 +1,7 @@
 2005-01-17 Craig Franklin <craigfranklin@users.sourceforge.net>
+  * [gplink] Scan archives for missing symbols multiple times if necessary.
+
+2005-01-17 Craig Franklin <craigfranklin@users.sourceforge.net>
   * [gpasm] Fix relocation error with LCALL and LGOTO directives.
 
 2005-01-14 Craig Franklin <craigfranklin@users.sourceforge.net>
